[package]
name = "gh-proxy-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
bytes = "1.10.1"
futures = "0.3.31"
mime = "0.3.17"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.4", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
